fixed credentials on mobile

--- a/style.css
+++ b/style.css
@@ -165,8 +165,10 @@ body {
     position: absolute;
     bottom: 0;
     left: 50%;
-    color: var(--white);
     transform: translateX(-50%);
+    color: var(--white);
+    font-size: 1rem;
+
 }
 
 .attribution a{
